--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://paul.annesley.cc/
+url: http://paul.annesley.cc
 title: paul.annesley.cc
 subtitle:
 author: Paul Annesley
